# barch

./: .gitignore  Adaptors.hs  Application.hs  Foundation.hs  Model.hs  README.md  barch.cabal  devel.hs
Barch/: Adaptors.hs  Cart.hs  QueryParser.hs  UploadUtils.hs  Widgets.hs
Handler/: Browse.hs  Cart.hs  Delete.hs  DeleteUploadedFile.hs  Edit.hs  Home.hs  Search.hs  Upload.hs  UploadedFile.hs  View.hs
config/: keter.yaml  models  models~  mongoDB.yml  routes  settings.yml
deploy/: Procfile
messages/: en.msg
templates/: browse.hamlet  cart.hamlet  default-layout-wrapper.hamlet  default-layout.cassius  default-layout.hamlet  delete.hamlet  deleteUploadedFile.hamlet  edit.hamlet  exportCart.hamlet  fullReferenceView.hamlet  fullReferenceWithFiles.hamlet  homepage.hamlet  search.hamlet  shortReferenceView.hamlet  upload.hamlet  view.hamlet
