name: barch
version: 0.0.1
cabal-version: >=1.8
build-type: Simple
license: AllRightsReserved

flag dev
    description:  Turn on development settings, like auto-reload templates.
    default: False

flag library-only
    description:  Build for use with "yesod devel"
    default: False

library
    build-depends:
        base >=4 && <5,
        yesod >=1.2.5,
        yesod-core >=1.2.12,
        yesod-auth >=1.3,
        yesod-static >=1.2,
        yesod-form >=1.3,
        bytestring >=0.10 && <0.12,
        text >=1.1 && <1.3,
        persistent >=1.3 && <1.4,
        persistent-mongoDB >=1.3 && <1.4,
        persistent-template >=1.3 && <1.4,
        template-haskell >=2.8 && <2.10,
        shakespeare >=2.0 && <2.1,
        hjsmin >=0.1 && <0.2,
        monad-control >=0.3 && <0.4,
        wai-extra >=2.1 && <2.2,
        yaml >=0.8 && <0.9,
        http-conduit >=2.1 && <2.2,
        directory >=1.2 && <1.3,
        warp >=2.1 && <2.2,
        data-default -any,
        aeson >=0.6 && <0.8,
        conduit >=1.0 && <2.0,
        conduit-extra >=1.1 && <1.2,
        monad-logger >=0.3 && <0.4,
        fast-logger >=2.1.4 && <2.2,
        wai-logger >=2.1 && <2.2,
        containers >=0.5 && <0.6,
        bibtex >=0.1 && <0.2,
        parsec >=3.1.5 && <3.2,
        yesod-markdown >=0.8,
        time >=1.4 && <1.5

    if (flag(dev) || flag(library-only))
        exposed: True
        buildable: True
        cpp-options: -DDEVELOPMENT
        ghc-options: -Wall -O0
    else
        exposed: True
        buildable: True
        ghc-options: -Wall -O2
    exposed-modules:
        Application
        Foundation
        Import
        Model
        Settings
        Settings.StaticFiles
        Settings.Development
        Barch.Adaptors
        Barch.Cart
        Barch.QueryParser
        Barch.UploadUtils
        Barch.Widgets
        Handler.Browse
        Handler.Cart
        Handler.Edit
        Handler.Delete
        Handler.DeleteUploadedFile
        Handler.Home
        Handler.Search
        Handler.Upload
        Handler.UploadedFile
        Handler.View
    exposed: True
    buildable: True
    extensions: TemplateHaskell QuasiQuotes OverloadedStrings
                NoImplicitPrelude CPP MultiParamTypeClasses TypeFamilies GADTs
                GeneralizedNewtypeDeriving FlexibleContexts EmptyDataDecls
                NoMonomorphismRestriction DeriveDataTypeable

executable barch
    build-depends:
        base -any,
        barch -any,
        yesod -any

    if flag(library-only)
        buildable: False
    main-is: main.hs
    buildable: True
    hs-source-dirs: app
    ghc-options: -threaded -O2

test-suite test
    build-depends:
        base -any,
        barch -any,
        yesod-test >=1.2 && <1.3,
        yesod-core -any,
        yesod -any,
        persistent -any,
        persistent-mongoDB -any,
        resourcet -any,
        monad-logger -any,
        transformers >=0.3.0.0 && <0.4,
        hspec -any
    type: exitcode-stdio-1.0
    main-is: main.hs
    buildable: True
    hs-source-dirs: tests
    ghc-options: -Wall
